fix!: layout issue

--- a/src/pages/game/Game.css
+++ b/src/pages/game/Game.css
@@ -32,7 +32,7 @@ html[data-theme='dark'] .app-logo-light {
 .app-title {
   font-size: 2rem;
   font-weight: 700;
-  margin-right: 30px;
+  margin-right: 20px;
   user-select: none;
 }
 
